# openshell-deepagent

./: .env.example  Dockerfile  README.md  langgraph.json  pyproject.toml
src/: agent.py  dapr_durable_agent.py  dapr_langchain.py  dapr_observability_patch.py  deepagents_test_app.py  langgraph_dapr_app.py  langgraph_dapr_graph.py  openshell_runtime.py  openshell_tools.py  prompts.py
tests/: test_dapr_langchain.py  test_openshell_runtime.py
